test_suite/tests/ui/enum-representation/content-no-tag.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(content = "c")]
enum E {
    A(u8),
    B(String),
}

fn main() {}
